WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/Adjustments_for_Finance_Approval_Rpt_ID__c.field-meta.xml
<CustomField>
    <fullName>Adjustments_for_Finance_Approval_Rpt_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustments for Finance Approval Rpt ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>