WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/ContactDriverRecordID__c.field-meta.xml
<CustomField>
    <fullName>ContactDriverRecordID__c</fullName>
    <description>Used for the default contact on custom search</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactDriverRecordID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>