WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/ContactMerchantRecordID__c.field-meta.xml
<CustomField>
    <fullName>ContactMerchantRecordID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for the default contact on custom search</inlineHelpText>
    <label>ContactMerchantRecordID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>