WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/ContactOnlineUserRecordID__c.field-meta.xml
<CustomField>
    <fullName>ContactOnlineUserRecordID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactOnlineUserRecordID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>