WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/Financial_Institution_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FinancialInstitutionRecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>