WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/JunkEmailQueueID__c.field-meta.xml
<CustomField>
    <fullName>JunkEmailQueueID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JunkEmailQueueID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>