WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/PilotAccountRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>PilotAccountRecordTypeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Temporary to store the account record type ID</inlineHelpText>
    <label>PilotAccountRecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>