WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/PilotContactRecordTypeID2__c.field-meta.xml
<CustomField>
    <fullName>PilotContactRecordTypeID2__c</fullName>
    <description>Corporate Payments record type for contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PilotContactRecordTypeID2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>