WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/RefundsForFinanceApprovalReportId__c.field-meta.xml
<CustomField>
    <fullName>RefundsForFinanceApprovalReportId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refunds For Finance Approval Report Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>