WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/ServiceOperationsTransSurveyRecordID__c.field-meta.xml
<CustomField>
    <fullName>ServiceOperationsTransSurveyRecordID__c</fullName>
    <description>Transaction survey ID for Qualtrics. Used in PostChatForm.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Transaction survey ID for Qualtrics. Used in PostChatForm.</inlineHelpText>
    <label>ServiceOperationsTransSurveyRecordID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>