WexGit/Wex_DX/force-app/main/default/objects/Support_Operation_Settings__c/fields/Wex_Internal_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Wex_Internal_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wex Internal record id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>